--- a/project/build.gradle
+++ b/project/build.gradle
@@ -13,17 +13,13 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	
-	//lombok---------------------------------------- 
-	compileOnly 'org.projectlombok:lombok'  
-    annotationProcessor 'org.projectlombok:lombok'
-    //lombok----------------------------------------
-    
+	 
+	  
 }
 
 test {
