--- a/project/build.gradle
+++ b/project/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.3.10.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+    id "org.flywaydb.flyway" version "7.8.1"
 }
 
 group = 'com.example.project'
@@ -15,6 +16,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation('org.springframework.boot:spring-boot-starter-validation')
 	implementation 'com.h2database:h2'
 	compileOnly 'org.projectlombok:lombok'  
     annotationProcessor 'org.projectlombok:lombok'
